Update ListaO.java
Mod: List.of